Fix center aligned images w.in block

--- a/css/_media.scss
+++ b/css/_media.scss
@@ -48,7 +48,7 @@
       }
     }
   }
-  > div {
+  > div:not(.wp-block-image) {
     margin-top: 0;
     &.alignleft,
     &.alignright {
@@ -115,6 +115,12 @@
         max-width: 40rem;
         text-align: center;
       }
+    }
+    .aligncenter {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 var(--gutter);
     }
   }
 
